# when-did-i-last

./: .dockerignore  .envrc  .gitignore  README.md  app.json  docker-compose.yml  flake.nix  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  privacy-policy.md  turbo.json
.github/workflows/: deploy-docs.yml  release-containers.yml
app/: App.tsx  app.json  package-lock.json  package.json  tailwind.config.js
app/android/: settings.gradle
app/src/: CardCreationScreen.tsx  CardEditScreen.tsx  HomeScreen.tsx  LocalStorage.tsx  SettingsScreen.tsx  WDILCard.tsx
apps/backend/: .env.example  Cargo.toml  Dockerfile  package.json
apps/backend/src/: app_state.rs  config.rs  error.rs  main.rs
apps/backend/src/db/migrations/: m20260611_000001_create_users.rs  m20260611_000002_add_user_auth_salt.rs  m20260611_000003_create_notes.rs  m20260612_000003_create_api_users.rs  m20260612_000004_create_deks.rs  m20260612_000005_create_kek_metadata.rs  m20260715_000006_create_folders.rs  mod.rs
apps/backend/src/domains/: mod.rs
apps/backend/src/domains/auth/: api_user_entity.rs  controller.rs  entity.rs  kek_metadata_entity.rs  mod.rs  repository.rs  service.rs
apps/backend/src/domains/folders/: controller.rs  entity.rs  service.rs
apps/backend/src/domains/notes/: controller.rs  dek_entity.rs  entity.rs  mod.rs  repository.rs  service.rs
apps/backend/src/domains/system/: controller.rs  mod.rs
policies/: privacy-policy.md
scripts/: dev.mjs  release-tags.mjs  setupenv.mjs
temp/: App.tsx  app.json
when-did-i-last/: package-lock.json  package.json
(+97 files in other folders)
